# smw-editor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  check_ow.py  check_ow2.py  debug_ow2.py  debug_submap.py  ow_correct.ppm  probe_ow.py  submap_0_Main.ppm  submap_1_YI.ppm  submap_2_VanDome.ppm  submap_3_Forest.ppm  submap_4_ValBowser.ppm  submap_5_Special.ppm
.github/workflows/: build.yml
crates/smwe-bps/: Cargo.toml
crates/smwe-bps/src/: encoding.rs  lib.rs
crates/smwe-emu/: Cargo.toml
crates/smwe-emu/src/: emu.rs  rom.rs
crates/smwe-ips/: Cargo.toml
crates/smwe-ips/src/: lib.rs
crates/smwe-math/: Cargo.toml
crates/smwe-math/wrapped_pos2_derive/: Cargo.toml
crates/smwe-math/wrapped_rect_derive/: Cargo.toml
crates/smwe-math/wrapped_vec2_derive/: Cargo.toml
crates/smwe-render/: Cargo.toml
crates/smwe-render/src/: atlas_renderer.rs  basic_renderer.rs  gfx_buffers.rs  lib.rs  prerendered_level.rs  tile_atlas.rs
crates/smwe-render/src/palette_renderer/: mod.rs
crates/smwe-render/src/tile_renderer/: mod.rs  tile.fs.glsl  tile.gs.glsl
crates/smwe-rom/: Cargo.toml
crates/smwe-rom/examples/: analyze_layout.rs  analyze_submap_positions.rs  compare_gfx.rs  compare_tilemap.rs  debug_buffer.rs  debug_scroll.rs  debug_submap_pal.rs  debug_tiles.rs  dump_level.rs  dump_ow.rs  dump_ow_gfxtable.rs  dump_ow_layout.rs  dump_ow_pal.rs  dump_ow_palette.rs  dump_ow_raw.rs  dump_ow_raw2.rs  dump_ow_rle2.rs  dump_ow_tiles.rs  dump_vram_layout.rs  render_all_submaps.rs  render_gfx.rs  render_ow.rs  render_ow2.rs  render_ow_correct.rs  render_ow_full.rs  render_ow_preview.rs  render_submaps.rs
crates/smwe-rom/src/: internal_header.rs  lib.rs
crates/smwe-rom/src/compression/: lc_lz2.rs  lc_rle1.rs  lc_rle2.rs  mod.rs
crates/smwe-rom/src/disassembler/: binary_block.rs  mod.rs  serialization.rs
crates/smwe-rom/src/disassembler/jump_tables/: mod.rs
crates/smwe-rom/src/disassembler/opcodes/: mod.rs
crates/smwe-rom/src/graphics/: mod.rs  palette.rs
crates/smwe-rom/src/graphics/gfx_file/: mod.rs
crates/smwe-rom/src/level/: background.rs  headers.rs  mod.rs  object_layer.rs  secondary_entrance.rs  sprite_layer.rs
crates/smwe-rom/src/objects/: animated_tile_data.rs  map16.rs  mod.rs
crates/smwe-rom/src/objects/tilesets/: mod.rs
crates/smwe-rom/src/overworld/: mod.rs
crates/smwe-rom/src/snes_utils/: rom.rs  rom_slice.rs
crates/smwe-widgets/: Cargo.toml
crates/smwe-widgets/src/: palette_view.rs  value_switcher.rs  vram_view.rs
crates/wdc65816/src/: addressing.rs  lib.rs  statusreg.rs
src/: main.rs  project.rs
src/ui/: editing_mode.rs  mod.rs  ow_tile_picker.rs  project_creator.rs  style.rs  tab_viewer.rs  tool.rs  welcome.rs  world_editor.rs  world_editor_editing.rs
src/ui/dev_utils/: address_converter.rs
src/ui/editor_prototypes/: block_editor.rs  mod.rs
src/ui/editor_prototypes/level_editor/: background_layer.rs  central_panel.rs  editing.rs  left_panel.rs  level_renderer.rs  map16_editor.rs  mod.rs  object_layer.rs  palette_editor.rs  properties.rs  secondary_entrance_editor.rs  sprite_catalog.rs  sprite_editor.rs  sprite_layer.rs  tile_picker.rs
src/ui/editor_prototypes/sprite_map_editor/: central_panel.rs  highlighting.rs  left_panel.rs  menu_bar.rs  mod.rs
src/ui/editor_prototypes/sprite_map_editor/internals/: canvas.rs  editing.rs  state.rs
src/ui/editor_prototypes/sprite_map_editor/keyboard_shortcuts/: mod.rs
src/ui/world_editor/: editing.rs  mod.rs  ow_tile_picker.rs
