[package]
name = "smwe-math"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)"]
license = "MIT"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrapped_vec2_derive = { path = "wrapped_vec2_derive" }
wrapped_pos2_derive = { path = "wrapped_pos2_derive" }
wrapped_rect_derive = { path = "wrapped_rect_derive" }
duplicate = "1.0"
emath = "0.31.1"
shrinkwraprs = "0.3"
