[package]
name = "smwe-widgets"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Raven Szewczyk (eigenraven)"]
license = "MIT"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smwe-render = { path = "../smwe-render" }

anyhow = "1.0"
egui = "0.31.1"
egui_glow = "0.31.1"
egui-phosphor = "0.9.0"
glow = "0.13"
inline_tweak = "1.0"
itertools = "0.12"
thiserror = "1.0"
